--- a/src/Components/Generic-Layout/Footer/index.css
+++ b/src/Components/Generic-Layout/Footer/index.css
@@ -209,13 +209,14 @@
   .footer-links-block {
     grid-column: 1 / -1;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .footer-contact {
     grid-row: 2;
     width: auto;
     padding-top: 0;
+    align-items: baseline;
   }
 
   .sasika-quote {
